adding static url

--- a/monthly_challenges/challenges/templates/challenges/index.html
+++ b/monthly_challenges/challenges/templates/challenges/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <ul>
-        {% for m in months %}
-            <li><a href"">{{ m|title }}</a></li>
-        {% endfor %}
+      {% for m in months %}
+      <li><a href="/challenges/{{ m }}">{{ m|title }}</a></li>
+      {% endfor %}
     </ul>
   </body>
 </html>
