--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ month|title }} Challenge</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>{{ month|title }}'s Challenge</h1>
+    {% if text is not None%}
     <h2>{{ text }}</h2>
-</body>
+    {% else %}
+    <p>There is no challenge for this month yet.</p>
+    {% endif %}
+  </body>
 </html>
