--- a/monthly_challenges/challenges/templates/challenges/index.html
+++ b/monthly_challenges/challenges/templates/challenges/index.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Challenges</title>
-  </head>
-  <body>
-    <ul>
-      {% for m in months %}
-      <li><a href="{% url 'month-challenge' m %}">{{ m|title }}</a></li>
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+{% extends "base.html" %} {% block page_title %} All Challenges {% endblock %}
+{% block content %}
+<ul>
+  {% for m in months %}
+  <li><a href="{% url 'month-challenge' m %}">{{ m|title }}</a></li>
+  {% endfor %}
+</ul>
+{% endblock %}
