--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,8 +1,14 @@
-{% extends "base.html" %} {% block page_title %} {{month|title}}Challenges
-{%endblock%} {% block content %}
-<h1>{{ month|title }}'s Challenge</h1>
-{% if text is not None%}
-<h2>{{ text }}</h2>
-{% else %}
-<p>There is no challenge for this month yet.</p>
-{% endif %} {% endblock %}
+{% extends "base.html" %} 
+{% block page_title %} 
+    {{month|title}} Challenges
+{%endblock%} 
+{% block content %}
+    {% include "challenges/includes/header.html" %}
+
+    <h1>{{ month|title }}'s Challenge</h1>
+    {% if text is not None%}
+        <h2>{{ text }}</h2>
+    {% else %}
+        <p>There is no challenge for this month yet.</p>
+    {% endif %} 
+{% endblock %}
