--- a/monthly_challenges/challenges/templates/challenges/index.html
+++ b/monthly_challenges/challenges/templates/challenges/index.html
@@ -1,8 +1,10 @@
-{% extends "base.html" %} {% block page_title %} All Challenges {% endblock %}
+{% extends "base.html" %}
+{% block page_title %} All Challenges {% endblock %}
 {% block content %}
-<ul>
-  {% for m in months %}
-  <li><a href="{% url 'month-challenge' m %}">{{ m|title }}</a></li>
-  {% endfor %}
-</ul>
+  {% include "challenges/includes/header.html" %}
+  <ul>
+    {% for m in months %}
+    <li><a href="{% url 'month-challenge' m %}">{{ m|title }}</a></li>
+    {% endfor %}
+  </ul>
 {% endblock %}
