--- a/monthly_challenges/templates/base.html
+++ b/monthly_challenges/templates/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block page_title %}My Challenges{% endblock %}</title>
+    {% block css_block %}
+    {% endblock css_block %}
+    
   </head>
   <body>
     {% block content %} {% endblock %}
