--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %} 
+{% load static %}
+
+{% block css_block %}
+  <link rel="stylesheet" href="{% static "challenges/challenge.css"%}">
+  <link rel="stylesheet" href="{% static "challenges/includes/header.css"%}">
+{% endblock css_block %}
+
 {% block page_title %} 
     {{month|title}} Challenges
 {%endblock%} 
@@ -9,6 +16,6 @@
     {% if text is not None%}
         <h2>{{ text }}</h2>
     {% else %}
-        <p>There is no challenge for this month yet.</p>
+        <p class="fallback">There is no challenge for this month yet.</p>
     {% endif %} 
 {% endblock %}
